# English-Vocabulary-GPT

./: .gitignore  pyproject.toml
src/: main.py
src/english_vacablary_gpt/: vocabulary_gpt.py  vocabulary_parser.py
tests/test_english_vocabulary_gpt/: test_create_vocabulary.py
